quality checking of search input